name:                Hoggle
version:             0.1.0.0
synopsis:            Word Scramble Game in Haskell
homepage:            https://github.com/maxsnew/Hoggle
author:              Max New
maintainer:          maxsnew@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

Library
  Hs-Source-Dirs:      src
  build-depends:       base >= 4.5.0, base < 5,
                       containers >= 0.4,
                       random >= 1.0, random < 2,
                       mtl >= 2.1, mtl < 3,
                       array >= 0.4, array < 0.5,
                       list-tries >= 0.5, list-tries < 0.6,
                       transformers >= 0.3.0, transformers < 0.4,
                       QuickCheck >= 2.0, QuickCheck < 3
  Exposed-Modules:     Game.Hoggle,
                       Game.Hoggle.Board
  Other-Modules:       Game.Hoggle.Random,
                       Game.Hoggle.Trie,
                       Game.Hoggle.Words
                       Game.Hoggle.Check
  ghc-options:         -Wall -fno-warn-type-defaults
  Buildable:           True

executable Hoggle
  main-is:             Hoggle.hs
  Hs-Source-Dirs:      .
  build-depends:       Hoggle,
                       base >= 4.5.0, base < 5,
                       binary >= 0.5, bytestring >= 0.9,
                       mtl >= 2.1, mtl < 3,
                       random >= 1.0, random < 2
  ghc-options:         -Wall -fno-warn-type-defaults

Test-Suite test
  type:                exitcode-stdio-1.0
  Hs-Source-Dirs:      test
  main-is:             Test.hs
  build-depends:       Hoggle,
                       base,
                       test-framework >= 0.8, test-framework < 0.9,
                       test-framework-quickcheck2 >= 0.3, test-framework-quickcheck2 < 0.4,
                       QuickCheck >= 2.0, QuickCheck < 3
